@@ -1,3 +1,7 @@
+(04/14/08)
+*** Constant interning - this reduces the number of datasets for local values
+    created, especially when constants are used in loops.
+
 (03/26/08)
 *** String literals now use \ as escape character - for example, use \"
     to insert a quote into a string literal. Where \ was previously used
